ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Variation__mdt/Loan_Variation__mdt.object-meta.xml
<CustomObject>
    <label>Loan Variation</label>
    <pluralLabel>Loan Variations</pluralLabel>
</CustomObject>