ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Variation__mdt/fields/upperLimitCSDCase__c.field-meta.xml
<CustomField>
    <fullName>upperLimitCSDCase__c</fullName>
    <defaultValue>1</defaultValue>
    <label>upperLimitCSDCase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>