ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Variation__mdt/fields/upperLimitExShowroom__c.field-meta.xml
<CustomField>
    <fullName>upperLimitExShowroom__c</fullName>
    <defaultValue>1</defaultValue>
    <label>upperLimitExShowroom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>